# learning-shifting-for-grasping

./: CMakeLists.txt  README.md  config.yaml  package.xml
cad-models/: ensenso-mount.stl  gripper.fcstd  gripper.stl
cmake/: FindEnsenso.cmake  FindTensorFlow.cmake
database/: app.py
database/static/: overview-app.js  overview-style.css
database/templates/: live.html  overview.html
include/bin_picking/: action.hpp  agent.hpp  bin.hpp  config.hpp  depth_image.hpp  epoch.hpp  image_utils.hpp  inference.hpp  inference_result.hpp  io.hpp  parameter.hpp
include/ensenso/: config.hpp  ensenso.hpp
include/frankr/: geometry.hpp  gripper.hpp  motion.hpp  robot.hpp  waypoint.hpp
include/grasping/: grasp.hpp  grasp_converter.hpp
include/pushing/: push.hpp  push_converter.hpp
include/realsense/: config.hpp  realsense.hpp
jupyter/: nn-default.ipynb  nn-push.ipynb  tensorflow_model.py
jupyter/.ipynb_checkpoints/: bayes-figure-checkpoint.ipynb  keras-default-checkpoint.ipynb  keras_utils-checkpoint.py  nn-default-checkpoint.ipynb  nn-images-checkpoint.ipynb  nn-push-checkpoint.ipynb  nn-specific-checkpoint.ipynb  nn-types-checkpoint.ipynb  nn-vae-checkpoint.ipynb  tensorflow_dual_loader-checkpoint.py  tensorflow_loader-checkpoint.py  tensorflow_specific_loader-checkpoint.py  tensorflow_type_loader-checkpoint.py  tensorflow_utils-checkpoint.py  torch-default-checkpoint.ipynb  torch_loader-checkpoint.py
launch/: bin_picking.launch  ensenso.launch  pushing.launch
models/grasping/: saved_model.pb
models/grasping/variables/: variables.index
models/pushing/: saved_model.pb
models/pushing/variables/: variables.index
scripts/: action.py  camera.py  depth_image.py  depth_image_transformation.py  generate_input.py  generate_input_planar_pose.py  helper.py  serializer.py
src/: grasping.cpp  inference.cpp  pushing.cpp
src/ensenso/: ensenso.cpp  ensenso_node.cpp
src/frankr/: gripper.cpp  robot.cpp
src/realsense/: realsense.cpp  realsense_node.cpp
srv/: GetDepthImage.srv  GetImages.srv
