<?xml version="1.0"?>
<package format="2">
  <name>bin_picking</name>
  <version>1.0.0</version>
  <description>ROS package for learning bin picking. Using moveit.</description>

  <maintainer email="lars.berscheid@kit.edu">Lars Berscheid</maintainer>
  <license>LGPLv3</license>

  <author email="lars.berscheid@kit.edu">Lars Berscheid</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>franka_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>panda_moveit_config</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
